--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,13 +3,15 @@ import Layout from '@/layouts/Layout.astro';
 import Header from '@/sections/Header.astro';
 import Footer from '@/sections/Footer.astro';
 import Hero from '@/sections/Hero.astro';
+import Locations from '@/sections/Locations.astro';
 ---
 
 <Layout>
 	<div class="flex min-h-screen flex-col">
 		<Header />
-		<div class="flex flex-1">
+		<div class="flex flex-col flex-1">
 			<Hero />
+			<Locations />
 		</div>
 		<Footer />
 	</div>
