--- a/src/sections/Locations.astro
+++ b/src/sections/Locations.astro
@@ -2,11 +2,11 @@
 import Card from "@/components/Card.astro"
 ---
 
-<section class="grid grid-cols-3 grid-rows-2 gap-4">
-    <Card />
-    <Card />
-    <Card />
-    <Card />
-    <Card />
-    <Card />
+<section class="animate-fade-in max-w-4xl mx-auto grid grid-cols-3 grid-rows-2 gap-4">
+    <Card title="Asia" image="/asia.webp" description="Descubre Asia"/>
+    <Card title="Europa" image="/europa.webp" description="Descubre Europa"/>
+    <Card title="Norte América" image="/usa.webp" description="Descubre Norte América"/>
+    <Card title="Sudamérica" image="/sudamerica.webp" description="Descubre Sudamérica"/>
+    <Card title="África" image="/africa.webp" description="Descubre África"/>
+    <Card title="Oceanía" image="/oceania.webp" description="Descubre Oceanía"/>
 </section>
