--- a/src/sections/Hero.astro
+++ b/src/sections/Hero.astro
@@ -1,5 +1,5 @@
 <main class="max-w-4xl mx-auto justify-center items-center px-4 py-20 flex-col gap-4">
-    <p class="text-xl text-black/80 text-center text-balance">
+    <p class="text-xl text-black/80 text-center text-balance pb-4">
         Bienvenido a Kilauea, tu agencia que transforma ideas en experiencias inolvidables.
     </p>
     <h2 class="text-5xl font-bold text-black text-center">
