--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Header from '@/sections/Header.astro';
 import Footer from '@/sections/Footer.astro';
 import Hero from '@/sections/Hero.astro';
 import Locations from '@/sections/Locations.astro';
+import Contact from '@/sections/Contact.astro';
 ---
 
 <Layout>
@@ -12,6 +13,7 @@ import Locations from '@/sections/Locations.astro';
 		<div class="flex flex-col flex-1">
 			<Hero />
 			<Locations />
+			<Contact />
 		</div>
 		<Footer />
 	</div>
