Enhance button styling in Form component for improved visibility

--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -26,7 +26,7 @@ const { id = 'contact-form', action = '', textButton = 'Enviar', textSuccess = '
     </div>
     <button
         type="submit"
-        class="bg-rose-400 text-white px-4 py-2 pointer rounded hover:bg-rose-500 transition-colors duration-300 w-fit justify-end self-end">
+        class="bg-rose-400 text-white font-bold px-4 py-2 rounded hover:bg-rose-500 transition-colors duration-300 w-fit justify-end self-end">
         {textButton}
     </button>
 </form>
