--- a/src/sections/Hero.astro
+++ b/src/sections/Hero.astro
@@ -1,7 +1,14 @@
-<main class="max-w-4xl mx-auto justify-center items-center px-4 py-20 flex-col gap-4">
+<main class="max-w-4xl mx-auto justify-center items-center px-4 py-20 flex flex-col gap-4">
     <p class="text-xl text-black/80 text-center text-balance pb-4">
         Bienvenido a Kilauea, tu agencia que transforma ideas en experiencias inolvidables.
     </p>
-    <h2 class="text-5xl font-bold text-black text-center">
+    <h2 class="text-5xl font-bold text-black text-center mb-10">
         Descubre destinos de ensueño con nosotros
     </h2>
+    <a href="#contact">
+        <div class="flex justify-center items-center max-w-100 bg-rose-400 hover:bg-rose-500 transition-colors duration-300 text-white text-2xl px-6 py-3 rounded-sm font-bold">
+            Anímate
+        </div>
+    </a>    
+</main>
+    
