--- a/src/sections/Contact.astro
+++ b/src/sections/Contact.astro
@@ -2,7 +2,7 @@
 import Form from '@/components/Form.astro';
 ---
 
-<section class="max-w-4xl mx-auto justify-center items-center px-6 py-8 flex-col gap-4 bg-white rounded-md shadow-md mt-20 mb-20">
+<section id="contact" class="max-w-4xl mx-auto justify-center items-center px-6 py-8 flex-col gap-4 bg-white rounded-md shadow-md mt-20 mb-20">
     <h2 class="text-3xl font-bold mb-4">Escríbenos y déjate llevar</h2>
     <Form 
         action="https://formspree.io/f/mnqylznp"
