Refactor 404 page link structure for improved styling and user experience

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -15,8 +15,10 @@ import Footer from '@/sections/Footer.astro';
                 <p class="text-xl text-balance mb-8">
                     Lo sentimos, la página que buscas no existe.
                 </p>
-                <a href="/" class="bg-blue-600 text-white px-6 py-3 rounded-lg font-bold hover:bg-blue-700 transition-all hover:scale-105 active:scale-95">
-                    Volver al inicio
+                <a href="/">
+                    <div class="flex justify-center items-center max-w-100 bg-rose-400 hover:bg-rose-500 transition-colors duration-300 text-white text-2xl px-6 py-3 rounded-sm font-bold">
+                        Volver al inicio
+                    </div>
                 </a>
             </section>
         </div>
