--- a/src/sections/Locations.astro
+++ b/src/sections/Locations.astro
@@ -2,7 +2,7 @@
 import Card from "@/components/Card.astro"
 ---
 
-<section class="animate-fade-in max-w-4xl mx-auto grid grid-cols-3 grid-rows-2 gap-4">
+<section class="animate-fade-in max-w-4xl mx-4 md:mx-auto grid grid-cols-1  grid-rows-2 gap-4 md:grid-cols-3">
     <Card title="Asia" image="/asia.webp" description="Descubre Asia"/>
     <Card title="Europa" image="/europa.webp" description="Descubre Europa"/>
     <Card title="Norte América" image="/usa.webp" description="Descubre Norte América"/>
